kubernetes/documents-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: documents-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: documents-service
  template:
    metadata:
      labels:
        app: documents-service
    spec:
      containers:
      - name: documents-service
        image: documents-service
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: documents-service
spec:
  selector:
    app: documents-service
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
